--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:demoApp": "node dist/demo-app/server/server.mjs"
-  },
+    "test": "ng test"
+    },
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.0",
@@ -22,7 +21,6 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.10",
     "bootstrap": "^5.3.3",
-    "express": "^4.18.2",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
